--- a/JS-Assignement/excel.html
+++ b/JS-Assignement/excel.html
@@ -6,7 +6,7 @@
     <title>Excel</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body class="dark-theme">
     <header>
       <nav>
         <ul>
@@ -15,8 +15,8 @@
         </ul>
       </nav>
       <div class="themes">
-        <input type="button" value="Dark theme" />
-        <input type="button" value="Warm theme" />
+        <input type="button" value="Dark theme" id="dark-theme-btn" />
+        <input type="button" value="Warm theme" id="warm-theme-btn" />
       </div>
     </header>
 
