--- a/JS-Assignement/index.html
+++ b/JS-Assignement/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body class = "dark-theme">
     <header>
       <nav>
         <ul>
@@ -15,8 +15,8 @@
         </ul>
       </nav>
       <div class = "themes">
-        <input type="button" value = "Dark theme">
-        <input type="button" value = "Warm theme">
+        <input type="button" value = "Dark theme" id="dark-theme-btn">
+        <input type="button" value = "Warm theme" id="warm-theme-btn">
       </div>
     </header>
 
@@ -49,7 +49,7 @@
         <label for="basic">Basic Membership</label><br />
 
         <button type="button" id="send">Send</button>
-        <input type="reset" value = "Reset"></input>
+        <input type="reset" value = "Reset" id = "reset"></input>
       </form>
 
       <div id="output" class="hidden"></div>
