--- a/VueContentBehaviour/index.html
+++ b/VueContentBehaviour/index.html
@@ -56,17 +56,16 @@
     </div>
 
     <footer>
-      <p>&copy; 2024 - Vue project - Gabriel Sautière</p>
+      <p>&copy; 2024 - Vue project - Gabriel, Léo and Paul</p>
     </footer>
 
     <script type="module">
       import { items } from "./data/index.js";
-      console.log(items);
 
       const javaPackagesApp = {
         data() {
           return {
-            mainHeading: "The sports that I practice",
+            mainHeading: "The sports that we practice",
             items,
             isFlipped: false,
             index: 0,
